--- a/prototype.html
+++ b/prototype.html
@@ -13,13 +13,21 @@
 <body>
  
 <div class="ui-widget">
-  <label for="tags">city: </label>
-  <input id="tags">
+  <label for="mainCity">city: </label>
+  <input id="mainCity">
 </div>
- 
+ <div class="toggleContainer">
+    <span class="toggleLabel">Percentage</span>
+    <div class = 'toggle off'></div>
+</div>
+
+
+
+
 <div id = "chartContainer"></div>
  
  <script src="https://d3js.org/d3.v7.min.js"></script>
+ <script src="js/vendor/countup.min.js"></script>
  <script src = "js/main.js"></script>
 
 </body>
