hide data download button

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <a href = "https://www.urban.org/research/publication/why-do-households-color-own-only-quarter-nations-housing-wealth-when-they-compose-third-nations-households/view/full_report" target = "_blank">
                       <div class = "button clear footer readResearchButton">READ THE RESEARCH</div>
                     </a>
-                    <a href = "" target = "_blank">
+<!--                     <a href = "" target = "_blank">
                       <div class = "button clear footer readResearchButton">DOWNLOAD THE DATA</div>
-                    </a>
+                    </a> -->
 
                     <p>The measures calculated in this data tool come from the US Census Bureau&rsquo;s 2019 American Community Survey. We use &ldquo;housing wealth&rdquo; to describe the total value of primary residences, not housing equity. This terminology is consistent with its use in previous <a href = "https://www.federalreserve.gov/econres/feds/files/2018064r1pap.pdf" target = "_blank">research (PDF)</a>. Whereas housing equity is the difference between a home&rsquo;s value and debt collateralized by that home (e.g., the mortgage or a home equity line of credit), housing wealth is the product of the average owner-occupied home value and the total number of homeowners. The number of homeowners is equal to the total number of households multiplied by the homeownership rate. Subsequently, the steps from total households to total primary-residence housing wealth include both the homeownership rate and average home values.</p>
 
