related reading update

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <h3 id = "readmoreHeading">Related reading</h3>
                     <ul id = "readmoreList">
                       <li><a href = "https://www.urban.org/urban-wire/households-color-represent-third-nations-households-they-own-only-quarter-its-housing-wealth" target = "_blank">Households of Color Represent a Third of the Nation’s Households, but They Own Only a Quarter of Its Housing Wealth</a></li>
+                      <li><a href = "https://www.urban.org/urban-wire/housing-wealth-equitable-your-city" target = "_blank">Is Housing Wealth Equitable in Your City?</a></li>
                     </ul>
 
                     <h5>Project credits</h5>
