--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div class = "loaderHome">
     <h2 class = "loaderHeader">Tracking Homeownership Wealth Gaps</h2>
     <h3 class = "loaderSubHeader">Is Housing Wealth Equitable in Your City?</h3>
-    <h4 class = "datePublished">November 10, 2021</h4>
+    <h4 class = "datePublished">Last updated November 23, 2021</h4>
+
+    <p class="correction">We updated this data tool on November 23, 2021, to further explain our methodology and to correct the following sentence: In 2019, the value of all primary residences in the US was an estimated $26.3 trillion (not $23.6 trillion).</p>
 
     <p id = "firstP">Homeownership is a vital tool for building wealth and economic security, but households of color are less likely to own homes than white households. And on average, Black, Hispanic, and other nonwhite homeowners (excluding Asian households) typically own homes of lower value than white homeowners.</p>
 
@@ -234,6 +236,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <p>The measures calculated in this data tool come from the US Census Bureau&rsquo;s 2019 American Community Survey. We use &ldquo;housing wealth&rdquo; to describe the total value of primary residences, not housing equity. This terminology is consistent with its use in previous <a href = "https://www.federalreserve.gov/econres/feds/files/2018064r1pap.pdf" target = "_blank">research (PDF)</a>. Whereas housing equity is the difference between a home&rsquo;s value and debt collateralized by that home (e.g., the mortgage or a home equity line of credit), housing wealth is the product of the average owner-occupied home value and the total number of homeowners. The number of homeowners is equal to the total number of households multiplied by the homeownership rate. Subsequently, the steps from total households to total primary-residence housing wealth include both the homeownership rate and average home values.</p>
 
                     <p>We focus on cities rather than metropolitan areas because households of color are more likely to account for the majority of the population at the city level. Examining data at the city level can produce contrasting results between the racial and ethnic composition of a city’s household population and its primary-residence housing wealth owners. Local housing policy decisions happen more often at the city level than at the regional level. We include only incorporated cities and exclude census-designated places because they lack a municipal government that can adopt policies that support economic growth or inclusion.</p>
+
+                    <p>To provide a more comprehensive list of cities, we crosswalked Public Use Microdata Areas (PUMAs) as defined by the 2012 American Community Survey with cities using data from a Missouri Census Data Center application known as geocorr. Geographic definitions of PUMAs are smaller than that of cities. We then use population weights at the PUMA level to aggregate to the city level. We apply the PUMA delineations and the associated population weights to the 2019 American Community Survey data to produce the calculations in this tool. Following this construction, we kept cities where the population exceeded 7,000 people. We suggest caution when interpreting results from smaller cities.</p>
 
                     <p>This data tool uses the term Hispanic to refer to people of Latino or Hispanic origin because it is consistent with the US Census Bureau’s data collection. The authors acknowledge this may not be the preferred identifier, and we remain committed to employing inclusive language whenever possible.</p>
 
